manifest-undefined.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    commit: using_external_image
    image: harbor.bratislava.sk/standalone/bratiska-cli
    repositoryUrl: using_external_image
    tag: undefined
  labels:
    app: bratiska-cli
    service: app
    source: bratiska-cli
  name: bratiska-cli-app
  namespace: standalone
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 1337
  selector:
    app: bratiska-cli
    service: app
    source: bratiska-cli
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    commit: using_external_image
    image: harbor.bratislava.sk/standalone/bratiska-cli
    repositoryUrl: using_external_image
    tag: undefined
  labels:
    app: bratiska-cli
    service: database
    source: bratiska-cli
  name: bratiska-cli-database
  namespace: standalone
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: bratiska-cli
    service: database
    source: bratiska-cli
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    commit: using_external_image
    image: harbor.bratislava.sk/standalone/bratiska-cli
    repositoryUrl: using_external_image
    tag: undefined
  labels:
    app: bratiska-cli
    source: bratiska-cli
  name: bratiska-cli-meilisearch
  namespace: standalone
spec:
  ports:
    - name: internal
      port: 7700
      protocol: TCP
      targetPort: http
    - name: external
      port: 80
      protocol: TCP
      targetPort: 7700
  selector:
    app: bratiska-cli
    source: bratiska-cli
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    commit: using_external_image
    image: harbor.bratislava.sk/standalone/bratiska-cli
    repositoryUrl: using_external_image
    tag: undefined
  labels:
    app: bratiska-cli
    service: app
    source: bratiska-cli
  name: bratiska-cli-app
  namespace: standalone
spec:
  selector:
    matchLabels:
      app: bratiska-cli
      service: app
      source: bratiska-cli
  template:
    metadata:
      annotations:
        commit: using_external_image
        image: harbor.bratislava.sk/standalone/bratiska-cli
        repositoryUrl: using_external_image
        tag: undefined
      labels:
        app: bratiska-cli
        service: app
        source: bratiska-cli
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: bratiska-cli-database-secret
            - secretRef:
                name: bratiska-cli-meilisearch-secret
            - secretRef:
                name: bratiska-cli-config-strapi-secret
            - secretRef:
                name: minio-secret-standalone
            - configMapRef:
                name: bratiska-cli-env-42t865mtbm
            - configMapRef:
                name: bratiska-cli-database-27g86tcbkf
            - configMapRef:
                name: bratiska-cli-meilisearch-t94h89t7k8
          image: bratiska-cli
          imagePullPolicy: Always
          name: app
          readinessProbe:
            httpGet:
              path: /admin
              port: 1337
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 64Mi
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: harbor-secret-prod-standalone-bratiska-cli
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    commit: using_external_image
    image: harbor.bratislava.sk/standalone/bratiska-cli
    repositoryUrl: using_external_image
    tag: undefined
  labels:
    app: bratiska-cli
    service: meilisearch
    source: bratiska-cli
  name: bratiska-cli-meilisearch
  namespace: standalone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bratiska-cli
      service: meilisearch
      source: bratiska-cli
  serviceName: bratiska-cli-meilisearch
  template:
    metadata:
      annotations:
        commit: using_external_image
        image: harbor.bratislava.sk/standalone/bratiska-cli
        repositoryUrl: using_external_image
        tag: undefined
      labels:
        app: bratiska-cli
        service: meilisearch
        source: bratiska-cli
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: bratiska-cli-meilisearch-t94h89t7k8
            - secretRef:
                name: bratiska-cli-meilisearch-secret
          image: getmeili/meilisearch
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 60
          name: meilisearch
          ports:
            - containerPort: 7700
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 60
          volumeMounts:
            - mountPath: /data.ms
              name: bratiska-cli-meilisearch-data-storage
  volumeClaimTemplates:
    - metadata:
        labels:
          app: bratiska-cli
          service: meilisearch
          source: bratiska-cli
        name: bratiska-cli-meilisearch-data-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/issue-temporary-certificate: "true"
    commit: using_external_image
    image: harbor.bratislava.sk/standalone/bratiska-cli
    kubernetes.io/ingress.class: haproxy
    repositoryUrl: using_external_image
    tag: undefined
  labels:
    app: bratiska-cli
    service: app
    source: bratiska-cli
  name: bratiska-cli-ingress
  namespace: standalone
spec:
  rules:
    - host: bratiska-cli.bratislava.sk
      http:
        paths:
          - backend:
              service:
                name: bratiska-cli-app
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: bratiska-cli-meilisearch.bratislava.sk
      http:
        paths:
          - backend:
              service:
                name: bratiska-cli-meilisearch
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - bratiska-cli.bratislava.sk
        - bratiska-cli-meilisearch.bratislava.sk
      secretName: bratiska-cli-tls
